--- a/sources.html
+++ b/sources.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Water Waste</title>
-        <link href = "main.css" rel = "stylesheet" type = "text/css" >
+        <link href = "style.css" rel = "stylesheet" type = "text/css" >
         <script src="script.js"></script>
         <div class="container">
             <ul>
